--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
       - run:
           name: "Run Scan"
           command: |
-            echo $CIRCLE_PROJECT_REPONAME $CIRCLE_BRANCH $BASE_URI $TENANT $CLIENT_ID $ADDITIONAL_PARAMS
+            echo "$CIRCLE_PROJECT_REPONAME $CIRCLE_BRANCH $BASE_URI $TENANT $CLIENT_ID $ADDITIONAL_PARAMS"
             /app/bin/cx \
             scan create \
             -s . \
