--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,8 +27,8 @@ jobs:
             --agent CircleCI \
             --project-name $CIRCLE_PROJECT_REPONAME \
             --branch $CIRCLE_BRANCH \
-            --base-uri $BASE_URI \
-            --tenant $TENANT \
-            --client-id $CLIENT_ID \
-            --client-secret $CLIENT_SECRET \
+            --base-uri $CX_BASE_URI \
+            --tenant $CX_TENANT \
+            --client-id $CX_CLIENT_ID \
+            --client-secret $CX_CLIENT_SECRET \
             $ADDITIONAL_PARAMS
