--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
             tar -xzvf ScaResolver-linux64.tar.gz
             rm -rf ScaResolver-linux64.tar.gz
             echo Current Dir : `pwd`
-            ls
+            ls -l ./Sca*
             find . -name ScaResolver
             /app/bin/cx \
             scan create \
