--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,10 +21,8 @@ jobs:
             tar -xzvf ScaResolver-linux64.tar.gz
             rm -rf ScaResolver-linux64.tar.gz
             echo Current Dir : `pwd`
-            ls -l ./Sca*
-            realpath ScaResolver
-            find . -name ScaResolver
-            chmod a+x ./ScaResolver
+            ls -l Sca*
+            ./ScaResolver
             /app/bin/cx \
             scan create \
             -s . \
