--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,12 +7,14 @@ jobs:
       - run:
           name: "Run Scan"
           command: |
+            pushd ..
+            wget https://github.com/Checkmarx/ast-cli/releases/download/2.0.36/ast-cli_2.0.36_linux_x64.tar.gz
+            tar xzvf ast-cli_*.tar.gz
             wget https://sca-downloads.s3.amazonaws.com/cli/latest/ScaResolver-linux64.tar.gz
             tar -xzvf ScaResolver-linux64.tar.gz
             rm -rf ScaResolver-linux64.tar.gz
-            /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
-            /home/linuxbrew/.linuxbrew/bin/brew install checkmarx/ast-cli/ast-cli
-            /home/linuxbrew/.linuxbrew/Cellar/ast-cli/*/bin/cx \
+            popd
+            ../cx \
             scan create \
             -s . \
             --agent CircleCI \
@@ -23,5 +25,5 @@ jobs:
             --client-id $CX_CLIENT_ID \
             --client-secret $CX_CLIENT_SECRET \
             --sast-incremental \
-            --sca-resolver ./ScaResolver \
+            --sca-resolver ../ScaResolver \
             $ADDITIONAL_PARAMS
